fix: Fixed application name being too long

--- a/clients/portal/app-manager/components/app-info-view/index.scss
+++ b/clients/portal/app-manager/components/app-info-view/index.scss
@@ -1,5 +1,6 @@
   .app-info-view-text {
     p:first-child {
+      max-width: 150px;
       font-weight: 600;
       font-size: 16px;
       line-height: 24px;
